--- a/index.html
+++ b/index.html
@@ -62,29 +62,34 @@
 Neural Pathways</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://saminyeasar.github.io">Samin Yeasar Arnob</a><sup>1,2</sup>,</span>
+              <a href="https://saminyeasar.github.io">Samin Yeasar Arnob</a><sup>1,2,6</sup>,</span>
             <span class="author-block">
-              <a href="https://riyasatohib.com">Riyasat Ohib</a><sup>3</sup>,</span>
+              <a href="">Zhan Su</a><sup>3</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=nm3liowAAAAJ&hl=en">Sergey Plis</a><sup>4</sup>,
-            </span>
+              <a href="">Minseon Kim</a><sup>6</sup>,</span>
             <span class="author-block">
-              <a href="https://amyzhang.github.io">Amy Zhang</a><sup>5</sup>,
-            </span>
+              <a href="">Oleksiy Ostapenko</a><sup>5</sup>,</span>
             <span class="author-block">
-              <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a><sup>6</sup>,
-            </span>
+              <a href="">Esra’a Saleh</a><sup>2,3</sup>,</span>
             <span class="author-block">
-              <a href="https://mila.quebec/en/directory/doina-precup">Doina Precup</a><sup>1,2</sup>,
-            </span>
+              <a href="">Esra’a Saleh</a><sup>2,3</sup>,</span>
+            <span class="author-block">
+              <a href="https://riyasatohib.com">Riyasat Ohib</a><sup>4</sup>,</span>
+            <span class="author-block">
+              <a href="https://mila.quebec/en/directory/doina-precup">Doina Precup</a><sup>1,2</sup>,</span>
+            <span class="author-block">
+              <a href="">Lucas Page-Caccia</a><sup>6</sup>,</span>
+            <span class="author-block">
+              <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a><sup>6</sup>,</span>
+
           </div>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>McGill University,</span>
             <span class="author-block"><sup>2</sup>Mila Quebec AI Institute,</span>
-            <span class="author-block"><sup>3</sup>Georgia Institute of Technology,</span>
-            <span class="author-block"><sup>4</sup>Georgia State University,</span>
-            <span class="author-block"><sup>5</sup>University of Texas, Austin,</span>
+            <span class="author-block"><sup>3</sup>Universite de Montreal,</span>
+            <span class="author-block"><sup>4</sup>Georgia Institute of Technology,</span>
+            <span class="author-block"><sup>5</sup>ServiceNow,</span>
             <span class="author-block"><sup>6</sup>Microsoft Research</span>
           </div>
 
@@ -92,7 +97,7 @@ Neural Pathways</h1>
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://openreview.net/forum?id=WEoOreP0n5&referrer=%5Bthe%20profile%20of%20Alessandro%20Sordoni%5D(%2Fprofile%3Fid%3D~Alessandro_Sordoni2)"
+                <a href="https://openreview.net/pdf?id=te7UC87Zbw"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -101,7 +106,7 @@ Neural Pathways</h1>
                 </a>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/SaminYeasar/DAPD"
+                <a href="https://github.com/SaminYeasar/sparse_adapter"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
