--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Efficient Reinforcement Learning by Discovering
-Neural Pathways</h1>
+          <h1 class="title is-1 publication-title">Exploring Sparse Adapters for Scalable Merging of Parameter Efficient Experts</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://saminyeasar.github.io">Samin Yeasar Arnob</a><sup>1,2,6</sup>,</span>
