--- a/index.html
+++ b/index.html
@@ -123,10 +123,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="./static/images/np.png" alt="Teaser Image" style="height: 100%;" />
-      <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Neural pathway:</span> for any given task, activates a specific part of the neural network
-      </h2>
+      <img src="./static/images/sparse_adapter_fig.png" alt="Teaser Image" style="height: 100%;" />
     </div>
   </div>
 </section>
