--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Exploring Sparse Adapters for Scalable Merging of Parameter Efficient Experts</title>
+  <title>Sparse-Adapters</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -58,7 +58,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Sparse Adapters</h1>
+          <h1 class="title is-1 publication-title">Exploring Sparse Adapters for Scalable Merging of Parameter Efficient Experts</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://saminyeasar.github.io">Samin Yeasar Arnob</a><sup>1,2,6</sup>,</span>
