--- a/index.html
+++ b/index.html
@@ -153,6 +153,16 @@
   </div>
 </section>
 
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+       <img src="./static/images/spad_fig2.png" alt="Teaser Image" style="height: 100%;" />
+       <img src="./static/images/spad_fig3.png" alt="Teaser Image" style="height: 100%;" />
+       <img src="./static/images/spad_fig4.png" alt="Teaser Image" style="height: 100%;" />
+    </div>
+  </div>
+</section>
+
 
 <section class="hero teaser">
   <div class="container is-max-desktop">
